--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-   "start": "nodemon home.js"
+   "start": "node home.js"
   },
   "author": "Saloni Rathi",
   "license": "ISC",
